# moulax

./: .gitignore  pyproject.toml
mestim_mcmc/: sampling.py  scores.py  utils.py
moulax/: psifun.py  sampling.py  utils.py
notebooks/: example_huber_lm.py  example_huber_lm_disp.py  example_huber_logistic.py  scratch.py
